<resources>
    <string name="app_name">TecScrum</string>
    <string name="name_world">Hello World by Jordan!!!</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="sign_up">Sign Up</string>
    <string name="projects">Proyectos</string>
    <string name="sprints">Sprints</string>
    <string name="team">Equipo</string>
    <string name="send">Enviar</string>
    <string name="did_yesterday">¿Qué hice ayer?</string>
    <string name="do_will_today">¿Qué haré hoy?</string>
    <string name="emotion_question">¿Cómo te sentiste hoy?</string>
    <string name="difficulties_question">¿Qué dificultades tuviste hoy?</string>
    <string name="dedicated_question">¿Cuánto es tu avance en la tarea actual?</string>
    <string name="emotion_angry">Enojado</string>
    <string name="emotion_bad">Mal</string>
    <string name="emotion_neutral">Neutral</string>
    <string name="emotion_happy">Feliz</string>
    <string name="emotion_excellent">Excelente</string>
    <string name="daily">Daily</string>
    <string name="mood_today">Mood Today</string>
    <string name="forum">Foro</string>
    <string name="go_sprints">Ir a la sección Sprints</string>
    <string name="go_team">Ir a la sección del equipo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_hint">Escribe un comentario</string>
    <string name="mobile">Móvil</string>
    <string name="mail">Correo</string>
    <string name="names">Nombres</string>
    <string name="lastname">Apellidos</string>
    <string name="about">Acerca de</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="profile">Perfil</string>


    <!-- Notifications -->
    <string name="daily_text">Toque para completar el formulario diario</string>
    <string name="connect_network">Por favor, conéctese a la red</string>
    <string name="enough_projects">No hay Proyectos disponibles</string>
    <string name="enough_sprints">No hay Sprints disponibles</string>
    <string name="invalid_credentials">Credenciales incorrectas</string>
    <string name="change_pasword">Cambiar Contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="required_form">Complete todos los campos</string>
    <string name="passwords_not_match">Los contraseñas no coinciden</string>
    <string name="enough_daily">No hay Dailies disponibles</string>
    <string name="enough_mood">No hay MoodTodays disponibles</string>
    <string name="comment_first">Sé el primero en comentar</string>

</resources>
