<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_nav_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_projects"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/projects" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/profile" />



    </group>

    <group
        android:id="@+id/group_nav_system"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/log_out" />

    </group>

</menu>