<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_width="wrap_content"
    android:background="@color/White"
    android:layout_marginHorizontal="25dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/relativelayout_dialog"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:paddingVertical="25dp"
            android:fontFamily="@font/lato"
            android:text="@string/change_pasword"/>

    </RelativeLayout>
    <EditText
        android:id="@+id/editText_old_password"
        android:inputType="textPassword"
        android:layout_below="@+id/relativelayout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"

        android:fontFamily="@font/lato"
        android:layout_marginTop="16dp"
        android:theme="@style/Theme.App.Edittext"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/current_password" />
    <EditText
        android:id="@+id/editText_new_password"
        android:inputType="textPassword"
        android:layout_below="@+id/editText_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lato"
        android:theme="@style/Theme.App.Edittext"
        android:hint="@string/new_password"/>
    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_below="@+id/editText_new_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        android:theme="@style/Theme.App.Edittext"
        android:hint="@string/confirm_password"/>


</RelativeLayout>