<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserDetailActivity">

    <RelativeLayout
        android:id="@+id/relativelayout_circle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image_edit"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000">
        </de.hdodenhof.circleimageview.CircleImageView>
        <Button
            android:id="@+id/button_openimage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@android:drawable/ic_menu_camera"/>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_name"
        android:layout_width="match_parent"
        android:layout_below="@+id/relativelayout_circle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/lato"
                android:layout_weight="7"
                android:text="@string/names"/>

            <EditText
                android:layout_marginStart="10dp"
                android:id="@+id/editText_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_weight="3"
                android:fontFamily="@font/lato"
                android:textColor="@color/Black"
                android:textSize="15dp"
                android:theme="@style/Theme.App.Edittext"
                android:textStyle="bold"/>




        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_lastname"
        android:layout_width="match_parent"
        android:layout_below="@+id/cardview_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="1dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/lato"
                android:layout_weight="7"
                android:text="@string/lastname"/>

            <EditText
                android:id="@+id/editText_lastname_edit"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/lato"
                android:textColor="@color/Black"
                android:textSize="15dp"
                android:theme="@style/Theme.App.Edittext"
                android:textStyle="bold"/>




        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_phone"
        android:layout_width="match_parent"
        android:layout_below="@+id/cardview_lastname"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="1dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textStyle="bold"
                android:fontFamily="@font/lato"
                android:text="@string/mobile"/>

            <EditText
                android:id="@+id/editText_phone_edit"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textColor="@color/Black"
                android:inputType="number"
                android:textSize="15dp"
                android:theme="@style/Theme.App.Edittext"
                android:textStyle="bold"/>




        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:backgroundTint="@color/Black_Cat"
        android:backgroundTint="@color/colorPrimary"
        android:src="@android:drawable/ic_menu_save" />

</RelativeLayout>